--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "ipython",
     "jupyterlab",
     "loguru",
+    "lorem>=0.1.1",
     "matplotlib",
     "notebook",
     "numpy",
@@ -24,6 +25,7 @@ dependencies = [
     "ruff",
     "scikit-learn",
     "seaborn>=0.13.2",
+    "tenacity>=9.1.2",
     "tqdm",
     "typer",
 ]
