feat: added streamlit add to be able to visualize model_df.csv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,13 @@ dependencies = [
     "numpy",
     "pandas",
     "pip",
+    "plotly>=6.5.0",
     "pytest",
     "python-dotenv",
     "ruff",
     "scikit-learn",
     "seaborn>=0.13.2",
+    "streamlit>=1.52.1",
     "tenacity>=9.1.2",
     "tqdm",
     "typer",
