--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ dependencies = [
     "seaborn>=0.13.2",
     "streamlit>=1.52.1",
     "tenacity>=9.1.2",
+    "torch>=2.9.1",
     "tqdm",
+    "transformers>=4.57.3",
     "typer",
 ]
 requires-python = "~=3.10.0"
