--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,16 +14,23 @@ dependencies = [
     "ipython",
     "jupyterlab",
     "loguru",
+    "lorem>=0.1.1",
     "matplotlib",
     "notebook",
     "numpy",
     "pandas",
     "pip",
+    "plotly>=6.5.0",
     "pytest",
     "python-dotenv",
     "ruff",
     "scikit-learn",
+    "seaborn>=0.13.2",
+    "streamlit>=1.52.1",
+    "tenacity>=9.1.2",
+    "torch>=2.9.1",
     "tqdm",
+    "transformers>=4.57.3",
     "typer",
 ]
 requires-python = "~=3.10.0"
@@ -40,3 +47,17 @@ extend-select = ["I"]  # Add import sorting
 [tool.ruff.lint.isort]
 known-first-party = ["hallarch"]
 force-sort-within-sections = true
+
+[project.optional-dependencies]
+dev = [
+    "black==21.7b0",
+    "isort",
+    "autoflake",
+    "pylint",
+    "pre-commit",
+    "ipykernel>=7.0.1",
+    "jedi>=0.19.2",
+    "jupyterlab-lsp>=5.2.0",
+    "python-lsp-server>=1.13.1",
+    "jupyterlab>=4.4.9",
+]
