--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ dependencies = [
     "python-dotenv",
     "ruff",
     "scikit-learn",
+    "seaborn>=0.13.2",
+    "streamlit>=1.52.1",
+    "tenacity>=9.1.2",
+    "torch>=2.9.1",
     "tqdm",
     "typer",
 ]
